# Yuzu

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.html  CHANGELOG.md  CLA.html  CLA.md  CLAUDE.md  CLion.ini  CMakeLists.txt  CMakePresets.json  CODEBASE_REVIEW.html  CODEBASE_REVIEW.md  CODEX.html  CODEX.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.html  CONTRIBUTING.md  Dockerfile.agent-minimal  Dockerfile.agent-test  E2E_TEST_STEPS.md  HANDOVER-perf-N300-2026-05-02.md  HARDENING_SUMMARY.md  Instruction-Execution-History.local.html  Makefile  NOTICE  README.html  README.md  Release-Candidate.local.MD  SECURITY.html  SECURITY.md  SECURITY_REVIEW.html  SECURITY_REVIEW.md  Synthetic-UAT-Puppeteer.js  _build_tmp.bat  (+26 more)
agents/core/: CMakeLists.txt  meson.build
agents/core/src/: agent.cpp  agent_csr.cpp  cert_discovery.cpp  cert_store.cpp  cloud_identity.cpp  crash_event.cpp  crash_event.hpp  crash_observer.cpp  dex_event.cpp  dex_event.hpp  dex_linux_collector.cpp  dex_linux_journal.cpp  dex_linux_journal.hpp  dex_linux_kmsg.cpp  dex_linux_kmsg.hpp  dex_linux_proc.cpp  dex_linux_proc.hpp  dex_linux_storage.cpp  dex_linux_storage.hpp  dex_linux_sysfs.cpp  dex_linux_sysfs.hpp  dex_macos_collector.cpp  dex_macos_iokit.cpp  dex_macos_iokit.hpp  dex_macos_oslog.cpp  dex_macos_oslog.hpp  dex_macos_signals.cpp  dex_macos_signals.hpp  dex_observer.cpp  dex_perf_breach.cpp  dex_perf_breach.hpp  dex_rate_limiter.cpp  dex_signal_catalog.cpp  dex_win_poll.cpp  dex_win_poll.hpp  guard_file.cpp  guard_registry.cpp  guard_service.cpp  guard_systemd.cpp  guard_win_handle.hpp  (+25 more)
agents/plugins/agent_actions/: CMakeLists.txt  meson.build
agents/plugins/antivirus/: CMakeLists.txt  meson.build
agents/plugins/bitlocker/: CMakeLists.txt  meson.build
agents/plugins/certificates/: meson.build
agents/plugins/chargen/: CMakeLists.txt  meson.build
agents/plugins/content_dist/: meson.build
agents/plugins/device_identity/: CMakeLists.txt  meson.build
agents/plugins/diagnostics/: CMakeLists.txt  meson.build
agents/plugins/discovery/: meson.build
agents/plugins/event_logs/: CMakeLists.txt  meson.build
agents/plugins/example/: CMakeLists.txt  meson.build
agents/plugins/filesystem/: CMakeLists.txt  meson.build
agents/plugins/firewall/: CMakeLists.txt  meson.build
agents/plugins/hardware/: CMakeLists.txt  meson.build
agents/plugins/http_client/: meson.build
enterprise/: LICENSE-ENTERPRISE.html  LICENSE-ENTERPRISE.md  README.html  README.md  meson.build
proto/: CMakeLists.txt  gen_proto.py  meson.build
sdk/: CMakeLists.txt  LICENSE-SDK.html  LICENSE-SDK.md  README.html  README.md  meson.build
sdk/include/yuzu/: git_version.hpp.in  json_log_formatter.hpp  meson.build  metrics.hpp  plugin.h  plugin.hpp  sdk_utilities.hpp  secure_zero.hpp  string_utils.hpp  version.hpp  version.hpp.in  version_string.hpp
server/core/: CMakeLists.txt  meson.build
server/core/scripts/: embed_binary.py  embed_content.py  embed_js.py
server/core/src/: aes_gcm.hpp  agent_registry.cpp  agent_registry.hpp  agent_service_impl.cpp  agent_service_impl.hpp  analytics_event.hpp  analytics_event_store.cpp  analytics_event_store.hpp  analytics_sinks.cpp  api_token_store.cpp  api_token_store.hpp  app_perf_cohort_reader.cpp  app_perf_cohort_reader.hpp  app_perf_compare.cpp  app_perf_compare.hpp  app_perf_daily_store.cpp  app_perf_daily_store.hpp  app_perf_fleet_store.cpp  app_perf_fleet_store.hpp  app_perf_group_reader.cpp  app_perf_group_reader.hpp  app_perf_hist.hpp  app_perf_ingestion.cpp  app_perf_ingestion.hpp  app_perf_rollup.cpp  app_perf_rollup.hpp  approval_manager.cpp  approval_manager.hpp  audit_store.cpp  audit_store.hpp  auth.cpp  auth_db.cpp  auth_routes.cpp  auth_routes.hpp  auto_approve.cpp  baseline_store.cpp  baseline_store.hpp  bundle_orchestrator.cpp  bundle_orchestrator.hpp  bundle_service.cpp  (+302 more)
server/core/static/: yuzu-viz-host.js  yuzu-viz.js  yuzu.css
tests/: CMakeLists.txt  coverage-baseline.json  known-flaky.json  meson.build  perf-baseline-provenance-N300.json  perf-baseline-provenance-N300.jsonl  perf-baseline-provenance-N300.jsonl.done  perf-baselines.json  test_changelog_order.py  test_gen_proto_version.py
tests/puppeteer/: dashboard-help-test.mjs  dashboard-plugin-suite.mjs  dashboard-sse-bug.mjs  dashboard-sse-debug.mjs  echarts-smoke.mjs  executions-drawer-smoke.mjs  executions-uat-2026-05-06.mjs  package-lock.json  package.json
tests/shell/: test_check_compose_versions.sh  test_mfa_reset.sh  test_pr2_gates.sh
tests/unit/: test_agent_csr.cpp  test_agent_subscribe_lift.cpp  test_app_perf_rollup_query.cpp  test_cert_discovery.cpp  test_crash_observer.cpp  test_device_ci_sync.cpp  test_dex_linux_journal.cpp  test_dex_linux_kmsg.cpp  test_dex_linux_proc.cpp  test_dex_linux_sysfs.cpp  test_dex_macos.cpp  test_dex_perf_breach.cpp  test_dex_rate_limiter.cpp  test_dex_signals.cpp  test_dex_win_poll.cpp  test_env_util.cpp  test_filesystem_actions.cpp  test_filesystem_read.cpp  test_fleet_snapshot.cpp  test_guard_file.cpp  test_guard_registry.cpp  test_guard_service.cpp  test_guard_systemd.cpp  test_guardian_engine.cpp  test_heartbeat_cancel_pattern.cpp  test_helpers.hpp  test_installed_apps_registry_utf8.cpp  test_inventory_sync.cpp  test_kv_store.cpp  test_metrics.cpp  test_metrics_perf.cpp  test_net_quality_sampler.cpp  test_netprobe_stats.cpp  test_new_plugins.cpp  test_parse_target_address.cpp  test_plugin_loader.cpp  test_resilience_strategy.cpp  test_sdk_utilities.cpp  test_string_utils.cpp  test_sync_source_app_perf.cpp  (+18 more)
tests/unit/fixtures/: invalid_name_plugin.cpp  reserved_name_plugin.cpp
tests/unit/server/: test_agent_health_store.cpp  test_agent_registry_token_revocation.cpp  test_agent_service_impl.cpp  test_analytics_event.cpp  test_api_token_store.cpp  test_app_perf_cohort_reader.cpp  test_app_perf_compare.cpp  test_app_perf_daily_store.cpp  test_app_perf_group_reader.cpp  (+145 more)
transport/: meson.build
transport/src/: transport_backend_impl.hpp  transport_factory.cpp  transport_static_assert.cpp
(+1138 files in other folders)
