option('build_agent',    type: 'boolean', value: true,  description: 'Build the agent daemon')
option('build_server',   type: 'boolean', value: true,  description: 'Build the server daemon')
option('build_examples', type: 'boolean', value: true,  description: 'Build example plugins')
option('build_tests',    type: 'boolean', value: false, description: 'Build unit and integration tests')
option('build_gateway', type: 'boolean', value: false, description: 'Build Erlang/OTP gateway (requires rebar3)')
# Sanitizers, LTO: use Meson built-ins instead of custom options:
#   -Db_lto=true                       Link-time optimisation
#   -Db_sanitize=address,undefined     AddressSanitizer + UBSan
#   -Db_sanitize=thread                ThreadSanitizer
