option('build_agent',    type: 'boolean', value: true,  description: 'Build the agent daemon')
option('build_server',   type: 'boolean', value: true,  description: 'Build the server daemon')
option('build_examples', type: 'boolean', value: true,  description: 'Build example plugins')
option('build_tests',    type: 'boolean', value: false, description: 'Build unit and integration tests')
option('systemd_guard',  type: 'feature', value: 'enabled',
       description: 'Linux systemd service guard (libsystemd / sd-bus). '
                  + 'enabled (default): require libsystemd so the shipped agent always offers the guard. '
                  + 'auto: use libsystemd if present, else build a no-op stub. disabled: always stub. '
                  + 'Use auto/disabled for musl/Alpine/minimal images without libsystemd.')
option('enable_enterprise', type: 'boolean', value: false,
       description: 'Build commercial enterprise modules from enterprise/. '
                  + 'Requires a commercial license — see enterprise/LICENSE-ENTERPRISE.md. '
                  + 'OSS AGPL builds MUST leave this off.')
# Sanitizers, LTO: use Meson built-ins instead of custom options:
#   -Db_lto=true                       Link-time optimisation
#   -Db_sanitize=address,undefined     AddressSanitizer + UBSan
#   -Db_sanitize=thread                ThreadSanitizer
