# ── Yuzu Enterprise Edition — build entry point ──────────────────────────────
#
# This file is only reached when the top-level build is configured with
# `-Denable_enterprise=true`. The rest of the repository is AGPL-3.0-or-later;
# this subtree is governed by `LICENSE-ENTERPRISE.md` (commercial license).
#
# At the time this scaffold lands, no enterprise modules exist yet — premium
# features (SAML/SSO, SCIM, advanced RBAC, compliance reporting) arrive in
# follow-up PRs. This file is intentionally empty so that enabling the flag
# today still produces a valid build.

message('enterprise/meson.build: no enterprise modules declared yet (scaffold only).')

# When the first real module lands, add subdir() lines here, e.g.:
#   subdir('server/sso')
#   subdir('server/scim')
#   subdir('server/compliance')
